tags/pre-demo-branch-merge/ruleml-api/target/generated-sources/antlr3/org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntaxParser.java
// $ANTLR 3.4 org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g 2012-02-21 17:29:58

	package org.ruleml.api.presentation_syntax_parser;
    import org.ruleml.api.*;
    import org.ruleml.api.AbstractSyntax.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class RuleMLPresentationSyntaxParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHA", "AND", "BASE", "CURIE", "DIGIT", "DOCUMENT", "ECHAR", "EOL", "EQUAL", "EXISTS", "EXTERNAL", "FORALL", "GREATER", "GROUP", "ID", "ID_CHAR", "ID_START_CHAR", "IMPLICATION", "IMPORT", "INSTANCE", "IRI", "IRI_CHAR", "IRI_REF", "IRI_START_CHAR", "LESS", "LITERAL", "LOCAL", "LPAR", "LSQBR", "MULTI_LINE_COMMENT", "NUMBER", "OR", "PREFIX", "PSOA", "RPAR", "RSQBR", "SHORTCONST", "SLOT", "SLOT_ARROW", "STRING", "SUBCLASS", "SYMSPACE_OPER", "TUPLE", "VAR_ID", "VAR_LIST", "WHITESPACE", "'@'"
    };

    public static final int EOF=-1;
    public static final int T__50=50;
    public static final int ALPHA=4;
    public static final int AND=5;
    public static final int BASE=6;
    public static final int CURIE=7;
    public static final int DIGIT=8;
    public static final int DOCUMENT=9;
    public static final int ECHAR=10;
    public static final int EOL=11;
    public static final int EQUAL=12;
    public static final int EXISTS=13;
    public static final int EXTERNAL=14;
    public static final int FORALL=15;
    public static final int GREATER=16;
    public static final int GROUP=17;
    public static final int ID=18;
    public static final int ID_CHAR=19;
    public static final int ID_START_CHAR=20;
    public static final int IMPLICATION=21;
    public static final int IMPORT=22;
    public static final int INSTANCE=23;
    public static final int IRI=24;
    public static final int IRI_CHAR=25;
    public static final int IRI_REF=26;
    public static final int IRI_START_CHAR=27;
    public static final int LESS=28;
    public static final int LITERAL=29;
    public static final int LOCAL=30;
    public static final int LPAR=31;
    public static final int LSQBR=32;
    public static final int MULTI_LINE_COMMENT=33;
    public static final int NUMBER=34;
    public static final int OR=35;
    public static final int PREFIX=36;
    public static final int PSOA=37;
    public static final int RPAR=38;
    public static final int RSQBR=39;
    public static final int SHORTCONST=40;
    public static final int SLOT=41;
    public static final int SLOT_ARROW=42;
    public static final int STRING=43;
    public static final int SUBCLASS=44;
    public static final int SYMSPACE_OPER=45;
    public static final int TUPLE=46;
    public static final int VAR_ID=47;
    public static final int VAR_LIST=48;
    public static final int WHITESPACE=49;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public RuleMLPresentationSyntaxParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public RuleMLPresentationSyntaxParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return RuleMLPresentationSyntaxParser.tokenNames; }
    public String getGrammarFileName() { return "org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g"; }


        private DefaultAbstractSyntax factory = new DefaultAbstractSyntax();
        
        private CommonTree getTupleTree(List list_terms, int length)
        {
            CommonTree root = (CommonTree)adaptor.nil();
            for (int i = 0; i < length; i++)
                adaptor.addChild(root, list_terms.get(i));
            return root;
        }
        
        private String getStrValue(String str)
        {
            return str.substring(1, str.length() - 1);
        }


    public static class top_level_item_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "top_level_item"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:65:1: top_level_item : ( document )? EOF ;
    public final RuleMLPresentationSyntaxParser.top_level_item_return top_level_item() throws RecognitionException {
        RuleMLPresentationSyntaxParser.top_level_item_return retval = new RuleMLPresentationSyntaxParser.top_level_item_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        RuleMLPresentationSyntaxParser.document_return document1 =null;


        CommonTree EOF2_tree=null;

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:65:16: ( ( document )? EOF )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:65:18: ( document )? EOF
            {
            root_0 = (CommonTree)adaptor.nil();


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:65:18: ( document )?
            int alt1=2;
            switch ( input.LA(1) ) {
                case DOCUMENT:
                    {
                    alt1=1;
                    }
                    break;
            }

            switch (alt1) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:65:18: document
                    {
                    pushFollow(FOLLOW_document_in_top_level_item166);
                    document1=document();

                    state._fsp--;

                    adaptor.addChild(root_0, document1.getTree());

                    }
                    break;

            }


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_top_level_item169); 
            EOF2_tree = 
            (CommonTree)adaptor.create(EOF2)
            ;
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "top_level_item"


    public static class queries_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "queries"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:67:1: queries : ( rule )+ ;
    public final RuleMLPresentationSyntaxParser.queries_return queries() throws RecognitionException {
        RuleMLPresentationSyntaxParser.queries_return retval = new RuleMLPresentationSyntaxParser.queries_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        RuleMLPresentationSyntaxParser.rule_return rule3 =null;



        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:5: ( ( rule )+ )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:9: ( rule )+
            {
            root_0 = (CommonTree)adaptor.nil();


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:9: ( rule )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                switch ( input.LA(1) ) {
                case AND:
                case CURIE:
                case EXISTS:
                case EXTERNAL:
                case FORALL:
                case ID:
                case IRI_REF:
                case NUMBER:
                case OR:
                case STRING:
                case VAR_ID:
                    {
                    alt2=1;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:9: rule
            	    {
            	    pushFollow(FOLLOW_rule_in_queries183);
            	    rule3=rule();

            	    state._fsp--;

            	    adaptor.addChild(root_0, rule3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "queries"


    public static class document_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "document"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:70:1: document : DOCUMENT LPAR ( base )? ( prefix )* ( importDecl )* ( group )? RPAR -> ^( DOCUMENT ( base )? ( prefix )* ( importDecl )* ( group )? ) ;
    public final RuleMLPresentationSyntaxParser.document_return document() throws RecognitionException {
        RuleMLPresentationSyntaxParser.document_return retval = new RuleMLPresentationSyntaxParser.document_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token DOCUMENT4=null;
        Token LPAR5=null;
        Token RPAR10=null;
        RuleMLPresentationSyntaxParser.base_return base6 =null;

        RuleMLPresentationSyntaxParser.prefix_return prefix7 =null;

        RuleMLPresentationSyntaxParser.importDecl_return importDecl8 =null;

        RuleMLPresentationSyntaxParser.group_return group9 =null;


        CommonTree DOCUMENT4_tree=null;
        CommonTree LPAR5_tree=null;
        CommonTree RPAR10_tree=null;
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleTokenStream stream_DOCUMENT=new RewriteRuleTokenStream(adaptor,"token DOCUMENT");
        RewriteRuleSubtreeStream stream_importDecl=new RewriteRuleSubtreeStream(adaptor,"rule importDecl");
        RewriteRuleSubtreeStream stream_prefix=new RewriteRuleSubtreeStream(adaptor,"rule prefix");
        RewriteRuleSubtreeStream stream_base=new RewriteRuleSubtreeStream(adaptor,"rule base");
        RewriteRuleSubtreeStream stream_group=new RewriteRuleSubtreeStream(adaptor,"rule group");
        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:5: ( DOCUMENT LPAR ( base )? ( prefix )* ( importDecl )* ( group )? RPAR -> ^( DOCUMENT ( base )? ( prefix )* ( importDecl )* ( group )? ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:9: DOCUMENT LPAR ( base )? ( prefix )* ( importDecl )* ( group )? RPAR
            {
            DOCUMENT4=(Token)match(input,DOCUMENT,FOLLOW_DOCUMENT_in_document198);  
            stream_DOCUMENT.add(DOCUMENT4);


            LPAR5=(Token)match(input,LPAR,FOLLOW_LPAR_in_document200);  
            stream_LPAR.add(LPAR5);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:23: ( base )?
            int alt3=2;
            switch ( input.LA(1) ) {
                case BASE:
                    {
                    alt3=1;
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:23: base
                    {
                    pushFollow(FOLLOW_base_in_document202);
                    base6=base();

                    state._fsp--;

                    stream_base.add(base6.getTree());

                    }
                    break;

            }


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:29: ( prefix )*
            loop4:
            do {
                int alt4=2;
                switch ( input.LA(1) ) {
                case PREFIX:
                    {
                    alt4=1;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:29: prefix
            	    {
            	    pushFollow(FOLLOW_prefix_in_document205);
            	    prefix7=prefix();

            	    state._fsp--;

            	    stream_prefix.add(prefix7.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:37: ( importDecl )*
            loop5:
            do {
                int alt5=2;
                switch ( input.LA(1) ) {
                case IMPORT:
                    {
                    alt5=1;
                    }
                    break;

                }

                switch (alt5) {
            	case 1 :
            	    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:37: importDecl
            	    {
            	    pushFollow(FOLLOW_importDecl_in_document208);
            	    importDecl8=importDecl();

            	    state._fsp--;

            	    stream_importDecl.add(importDecl8.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:49: ( group )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case GROUP:
                    {
                    alt6=1;
                    }
                    break;
            }

            switch (alt6) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:71:49: group
                    {
                    pushFollow(FOLLOW_group_in_document211);
                    group9=group();

                    state._fsp--;

                    stream_group.add(group9.getTree());

                    }
                    break;

            }


            RPAR10=(Token)match(input,RPAR,FOLLOW_RPAR_in_document214);  
            stream_RPAR.add(RPAR10);


            // AST REWRITE
            // elements: prefix, group, DOCUMENT, importDecl, base
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 72:9: -> ^( DOCUMENT ( base )? ( prefix )* ( importDecl )* ( group )? )
            {
                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:72:12: ^( DOCUMENT ( base )? ( prefix )* ( importDecl )* ( group )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_DOCUMENT.nextNode()
                , root_1);

                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:72:23: ( base )?
                if ( stream_base.hasNext() ) {
                    adaptor.addChild(root_1, stream_base.nextTree());

                }
                stream_base.reset();

                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:72:29: ( prefix )*
                while ( stream_prefix.hasNext() ) {
                    adaptor.addChild(root_1, stream_prefix.nextTree());

                }
                stream_prefix.reset();

                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:72:37: ( importDecl )*
                while ( stream_importDecl.hasNext() ) {
                    adaptor.addChild(root_1, stream_importDecl.nextTree());

                }
                stream_importDecl.reset();

                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:72:49: ( group )?
                if ( stream_group.hasNext() ) {
                    adaptor.addChild(root_1, stream_group.nextTree());

                }
                stream_group.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "document"


    public static class base_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "base"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:75:1: base : BASE LPAR IRI_REF RPAR -> ^( BASE IRI_REF ) ;
    public final RuleMLPresentationSyntaxParser.base_return base() throws RecognitionException {
        RuleMLPresentationSyntaxParser.base_return retval = new RuleMLPresentationSyntaxParser.base_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token BASE11=null;
        Token LPAR12=null;
        Token IRI_REF13=null;
        Token RPAR14=null;

        CommonTree BASE11_tree=null;
        CommonTree LPAR12_tree=null;
        CommonTree IRI_REF13_tree=null;
        CommonTree RPAR14_tree=null;
        RewriteRuleTokenStream stream_BASE=new RewriteRuleTokenStream(adaptor,"token BASE");
        RewriteRuleTokenStream stream_IRI_REF=new RewriteRuleTokenStream(adaptor,"token IRI_REF");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:76:5: ( BASE LPAR IRI_REF RPAR -> ^( BASE IRI_REF ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:76:9: BASE LPAR IRI_REF RPAR
            {
            BASE11=(Token)match(input,BASE,FOLLOW_BASE_in_base259);  
            stream_BASE.add(BASE11);


            LPAR12=(Token)match(input,LPAR,FOLLOW_LPAR_in_base261);  
            stream_LPAR.add(LPAR12);


            IRI_REF13=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_base263);  
            stream_IRI_REF.add(IRI_REF13);


            RPAR14=(Token)match(input,RPAR,FOLLOW_RPAR_in_base265);  
            stream_RPAR.add(RPAR14);


            // AST REWRITE
            // elements: IRI_REF, BASE
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 76:32: -> ^( BASE IRI_REF )
            {
                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:76:35: ^( BASE IRI_REF )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_BASE.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_IRI_REF.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "base"


    public static class prefix_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prefix"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:79:1: prefix : PREFIX LPAR ID IRI_REF RPAR -> ^( PREFIX ID IRI_REF ) ;
    public final RuleMLPresentationSyntaxParser.prefix_return prefix() throws RecognitionException {
        RuleMLPresentationSyntaxParser.prefix_return retval = new RuleMLPresentationSyntaxParser.prefix_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PREFIX15=null;
        Token LPAR16=null;
        Token ID17=null;
        Token IRI_REF18=null;
        Token RPAR19=null;

        CommonTree PREFIX15_tree=null;
        CommonTree LPAR16_tree=null;
        CommonTree ID17_tree=null;
        CommonTree IRI_REF18_tree=null;
        CommonTree RPAR19_tree=null;
        RewriteRuleTokenStream stream_PREFIX=new RewriteRuleTokenStream(adaptor,"token PREFIX");
        RewriteRuleTokenStream stream_IRI_REF=new RewriteRuleTokenStream(adaptor,"token IRI_REF");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:80:5: ( PREFIX LPAR ID IRI_REF RPAR -> ^( PREFIX ID IRI_REF ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:80:9: PREFIX LPAR ID IRI_REF RPAR
            {
            PREFIX15=(Token)match(input,PREFIX,FOLLOW_PREFIX_in_prefix292);  
            stream_PREFIX.add(PREFIX15);


            LPAR16=(Token)match(input,LPAR,FOLLOW_LPAR_in_prefix294);  
            stream_LPAR.add(LPAR16);


            ID17=(Token)match(input,ID,FOLLOW_ID_in_prefix296);  
            stream_ID.add(ID17);


            IRI_REF18=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_prefix298);  
            stream_IRI_REF.add(IRI_REF18);


            RPAR19=(Token)match(input,RPAR,FOLLOW_RPAR_in_prefix300);  
            stream_RPAR.add(RPAR19);


            // AST REWRITE
            // elements: PREFIX, IRI_REF, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 80:37: -> ^( PREFIX ID IRI_REF )
            {
                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:80:40: ^( PREFIX ID IRI_REF )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_PREFIX.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_IRI_REF.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);

